Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8204635

[Linux] getMouseX, getMouseY in gtk GlassRobot.cpp ignore the HiDPI scale

    XMLWordPrintable

Details

    • Bug
    • Status: Resolved
    • P3
    • Resolution: Fixed
    • jfx11
    • jfx11
    • javafx
    • None

    Description

      The getMouseX, getMouseY functions in GlassRobot.cpp in gtk robot dont consider the HiDPI scale properties .
      The coordinates are scaled-up in mouseMove functions for uiScale but the coordinates are not scaled-down in getScaleX, getScaleY functions.

      To reproduce the bug, run the test case tests/system/src/test/java/test/robot/javafx/scene/MouseLocationOnScreenTest.java at HiDPI scale >= 1.5 on linux, the test case fails. A debug patch is also attached which fixes the issue. If required, a small test case can be provided to reproduce the issue.

      Attachments

        Activity

          People

            pbansal Pankaj Bansal (Inactive)
            pbansal Pankaj Bansal (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: