8204635: [Linux] getMouseX, getMouseY in gtk GlassRobot.cpp ignore the HiDPI scale

Reviewed-by: kcr, mbilla