modules/javafx.graphics/src/main/native-glass/gtk/GlassRobot.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -219,6 +219,7 @@ JNIEXPORT jint JNICALL Java_com_sun_glass_ui_gtk_GtkRobot__1getMouseX
 
     jint x;
     glass_gdk_display_get_pointer(gdk_display_get_default(), &x, NULL);
+    x = rint(x / getUIScale());
     return x;
 }
 
@@ -235,6 +236,7 @@ JNIEXPORT jint JNICALL Java_com_sun_glass_ui_gtk_GtkRobot__1getMouseY
 
     jint y;
     glass_gdk_display_get_pointer(gdk_display_get_default(), NULL, &y);
+    y = rint(y / getUIScale());
     return y;
 }
 
